# backend/docs/swagger.json
@@ -1655,7 +1655,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/types.NotificationRecipientResponse"
+                            "$ref": "#/definitions/types.NotificationRecipientsResponse"
                         }
                     },
                     "400": {
@@ -3184,6 +3184,10 @@
                     "type": "integer",
                     "example": 1
                 },
+                "severity": {
+                    "type": "string",
+                    "example": "critical"
+                },
                 "threshold_value": {
                     "type": "number",
                     "example": 80
@@ -3224,6 +3228,10 @@
                 "service_id": {
                     "type": "integer",
                     "example": 1
+                },
+                "severity": {
+                    "type": "string",
+                    "example": "critical"
                 },
                 "threshold_value": {
                     "type": "number",
@@ -3934,6 +3942,19 @@
                 }
             }
         },
+        "types.NotificationRecipientCreateItemRequest": {
+            "type": "object",
+            "properties": {
+                "min_severity": {
+                    "type": "string",
+                    "example": "warning"
+                },
+                "target": {
+                    "type": "string",
+                    "example": "ops@example.com"
+                }
+            }
+        },
         "types.NotificationRecipientCreateRequest": {
             "type": "object",
             "properties": {
@@ -3945,9 +3966,11 @@
                     "type": "integer",
                     "example": 1
                 },
-                "target": {
-                    "type": "string",
-                    "example": "ops@example.com"
+                "recipients": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/types.NotificationRecipientCreateItemRequest"
+                    }
                 }
             }
         },
@@ -3969,6 +3992,10 @@
                 "is_enabled": {
                     "type": "boolean",
                     "example": true
+                },
+                "min_severity": {
+                    "type": "string",
+                    "example": "warning"
                 },
                 "project_id": {
                     "type": "integer",
